// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButtonGroup Matches snapshot (desktop) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button:first-child {
  border-radius: 24px 0 0 24px;
}

.c0 button:last-child {
  border-radius: 0 24px 24px 0;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-left: none;
  box-sizing: border-box;
  color: #57666E;
  cursor: default;
  font-size: 0.875rem;
  height: 40px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: 0;
  padding: 0 var(--spacing-2x);
}

.c1:focus {
  z-index: 1;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c1:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c1:first-child {
  border-left: 1px solid #D9DDE2;
  margin: 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0080A5;
  border: 1px solid #0080A5;
  border-left: auto;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 0.875rem;
  height: 40px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: -1px;
  padding: 0 var(--spacing-2x);
}

.c2:focus {
  z-index: 1;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c2:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c2:first-child {
  border-left: 1px solid #0080A5;
  margin: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-left: none;
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  font-size: 0.875rem;
  height: 40px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: 0;
  padding: 0 var(--spacing-2x);
}

.c3:focus {
  z-index: 1;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c3:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c3:first-child {
  border-left: 1px solid #D9DDE2;
  margin: 0;
}

.c3:hover {
  background-color: #D9DDE2;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-label="Option 1"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    disabled=""
    type="button"
    value="option1"
  >
    Option 1
  </button>
  <button
    aria-label="Option 2"
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    Option 2
  </button>
  <button
    aria-label="Option 3"
    aria-pressed="false"
    class="c3"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    Option 3
  </button>
  <button
    aria-label="Option 4"
    aria-pressed="false"
    class="c3"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    Option 4
  </button>
</div>
`;

exports[`ToggleButtonGroup Matches snapshot (mobile) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button:first-child {
  border-radius: 24px 0 0 24px;
}

.c0 button:last-child {
  border-radius: 0 24px 24px 0;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-left: none;
  box-sizing: border-box;
  color: #57666E;
  cursor: default;
  font-size: 1rem;
  height: 48px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: 0;
  padding: 0 var(--spacing-2x);
}

.c1:focus {
  z-index: 1;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c1:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c1:first-child {
  border-left: 1px solid #D9DDE2;
  margin: 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0080A5;
  border: 1px solid #0080A5;
  border-left: auto;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 1rem;
  height: 48px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: -1px;
  padding: 0 var(--spacing-2x);
}

.c2:focus {
  z-index: 1;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c2:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c2:first-child {
  border-left: 1px solid #0080A5;
  margin: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-left: none;
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  font-size: 1rem;
  height: 48px;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  margin-left: 0;
  padding: 0 var(--spacing-2x);
}

.c3:focus {
  z-index: 1;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566,0 0 0 1px #0080A5;
}

.c3:disabled {
  background-color: #F1F2F2;
  color: #9CA7B4;
}

.c3:first-child {
  border-left: 1px solid #D9DDE2;
  margin: 0;
}

.c3:hover {
  background-color: #D9DDE2;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-label="Option 1"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    disabled=""
    type="button"
    value="option1"
  >
    Option 1
  </button>
  <button
    aria-label="Option 2"
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    Option 2
  </button>
  <button
    aria-label="Option 3"
    aria-pressed="false"
    class="c3"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    Option 3
  </button>
  <button
    aria-label="Option 4"
    aria-pressed="false"
    class="c3"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    Option 4
  </button>
</div>
`;
